--- a/surveyform.css
+++ b/surveyform.css
@@ -1,10 +1,85 @@
 /*This is a Free Code Camp project - Survey Form page - CSS file*/
 body {
     background-color: coral;
+    padding-left: 20px;
     text-align: center;
 }
 
 h1{
     font-family: 'Oswald', sans-serif;
     font-size: 55px;
+}
+#description{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+    padding-top: 50px;
+}
+#person-section{
+    display: block;
+    border: 4px solid black;
+    padding: 40px;
+    margin-top: 50px;
+    margin-right: 300px;
+    margin-left: 300px;
+    font-size: 20px;
+    font-family: 'Roboto Mono', monospace;
+}
+#name-section{
+    padding: 10px;
+}
+#email-section{
+    padding: 10px;
+}
+#number-section{
+    padding: 10px;
+}
+
+#list-section{
+    display: block;
+    border: 4px solid black;
+    padding: 40px;
+    margin-top: 50px;
+    margin-right: 300px;
+    margin-left: 300px;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif; 
+}
+#dropdown{
+    display: block;
+    margin-right: 250px;
+    margin-left: 250px;
+    margin-top: 20px;
+}
+#checkbox-section{
+    display: block;
+    border: 4px solid black;
+    padding: 40px;
+    padding-left: 150px;
+    margin-top: 50px;
+    margin-right: 300px;
+    margin-left: 300px;
+    font-size: 20px;
+    text-align: justify;
+    font-family: 'Poppins', sans-serif;
+}
+#radio-section{
+    display: block;
+    border: 4px solid black;
+    padding: 40px;
+    margin-top: 50px;
+    margin-right: 300px;
+    margin-left: 300px;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+}
+#comment-section{
+    margin-top: 60px;
+}
+#button-section{
+    margin-top: 50px;
+}
+#footer-info{
+    margin-top: 50px;
+    font-family: 'Marck Script', cursive;
+    font-size: 40px;
 }
