--- a/surveyform.css
+++ b/surveyform.css
@@ -1,10 +1,10 @@
 /*This is a Free Code Camp project - Survey Form page - CSS file*/
 body {
     background-color: coral;
-    padding-left: 20px;
     text-align: center;
+    display: auto;
+    padding: 20px;
 }
-
 h1{
     font-family: 'Oswald', sans-serif;
     font-size: 55px;
@@ -15,14 +15,10 @@ h1{
     padding-top: 50px;
 }
 #person-section{
-    display: block;
     border: 4px solid black;
-    padding: 40px;
-    margin-top: 50px;
-    margin-right: 300px;
-    margin-left: 300px;
     font-size: 20px;
     font-family: 'Roboto Mono', monospace;
+    margin-bottom: 20px;
 }
 #name-section{
     padding: 10px;
@@ -35,40 +31,20 @@ h1{
 }
 
 #list-section{
-    display: block;
     border: 4px solid black;
-    padding: 40px;
-    margin-top: 50px;
-    margin-right: 300px;
-    margin-left: 300px;
     font-size: 20px;
     font-family: 'Poppins', sans-serif; 
-}
-#dropdown{
-    display: block;
-    margin-right: 250px;
-    margin-left: 250px;
-    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
 }
 #checkbox-section{
-    display: block;
     border: 4px solid black;
-    padding: 40px;
-    padding-left: 150px;
-    margin-top: 50px;
-    margin-right: 300px;
-    margin-left: 300px;
     font-size: 20px;
-    text-align: justify;
     font-family: 'Poppins', sans-serif;
+    margin-bottom: 20px;
 }
 #radio-section{
-    display: block;
     border: 4px solid black;
-    padding: 40px;
-    margin-top: 50px;
-    margin-right: 300px;
-    margin-left: 300px;
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
 }
